k8s/network/00-network-policy.yaml
--- # 0) deny all
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: xray-api
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
--- # 1) DNS egress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: xray-api
spec:
  podSelector: {}
  policyTypes: ["Egress"]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

--- # 2) request -> python-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-public-ingress
  namespace: xray-api
spec:
  podSelector:
    matchLabels:
      app: python-api
  policyTypes: ["Ingress"]
  ingress:
    - ports:
        - protocol: TCP
          port: 8001
--- # 3) python-api -> postgres 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-egress-to-db
  namespace: xray-api
spec:
  podSelector:
    matchLabels:
      app: python-api
  policyTypes: ["Egress"]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
--- # 4) postgres -> python-api, db-init
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-ingress
  namespace: xray-api
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: python-api
        - podSelector:
            matchLabels:
              app: db-init
      ports:
        - protocol: TCP
          port: 5432

--- # 5) db-init -> postgres 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dbinit-egress-to-db
  namespace: xray-api
spec:
  podSelector:
    matchLabels:
      app: db-init
  policyTypes: ["Egress"]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
